@startuml

title __ARTIFACTS's Class Diagram__\n

  namespace com.frostwizard4.Neutrino {
    namespace artifacts {
      class com.frostwizard4.Neutrino.artifacts.DeathCapArtifact {
          ~ rndDeath : int
          + DeathCapArtifact()
          + appendTooltip()
          + finishUsing()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace artifacts {
      class com.frostwizard4.Neutrino.artifacts.EnchantersTomeArtifact {
          + EnchantersTomeArtifact()
          + appendTooltip()
          + use()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace artifacts {
      class com.frostwizard4.Neutrino.artifacts.HarvesterArtifact {
          + HarvesterArtifact()
          + appendTooltip()
          + use()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace artifacts {
      class com.frostwizard4.Neutrino.artifacts.LightningRodArtifact {
          + LightningRodArtifact()
          + appendTooltip()
          + summonLightning()
          + use()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace artifacts {
      class com.frostwizard4.Neutrino.artifacts.SoulHealerArtifact {
          + SoulHealerArtifact()
          + appendTooltip()
          + use()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace artifacts {
      class com.frostwizard4.Neutrino.artifacts.SoulPouchItem {
          + SoulPouchItem()
          + appendTooltip()
          + use()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace artifacts {
      class com.frostwizard4.Neutrino.artifacts.UpdraftTomeArtifact {
          + UpdraftTomeArtifact()
          + appendTooltip()
          + use()
      }
    }
  }
  

  com.frostwizard4.Neutrino.artifacts.DeathCapArtifact -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.artifacts.EnchantersTomeArtifact -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.artifacts.HarvesterArtifact -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.artifacts.LightningRodArtifact -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.artifacts.SoulHealerArtifact -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.artifacts.SoulPouchItem -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.artifacts.UpdraftTomeArtifact -up-|> net.minecraft.item.Item


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
